#cargo-features = ["strip"]

[package]
name = "reg_hunter"
version = "0.1.0"
authors = ["Brian Kellogg <theflakes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
#strip = 'symbols'
panic = 'abort'
opt-level = "z"
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
overflow-checks = false

[dependencies]
arrayvec = "0.5.2"
bstr = "0.2.14"
chrono = "0.4.19"
docopt = "1.1.0"
dunce = "1.0.1"
lazy_static = "1.4.0"
lnk = "0.3.0"
md5 = "0.7.0"
path_abs = "0.5.0"
regex = "1.4.2"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
tree_magic = "0.2.3"
whoami = "0.9.0"
winreg = "0.7"