#cargo-features = ["strip"]

[package]
name = "reg_hunter"
version = "0.5.0"
authors = ["Brian Kellogg <theflakes@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
#strip = 'symbols'
panic = 'abort'
opt-level = "z"
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
overflow-checks = false

[dependencies]
arrayvec = "0.7.2"
bstr = "0.2.17"
chrono = "0.4.19"
docopt = "1.1.1"
dunce = "1.0.1"
lazy_static = "1.4.0"
lnk = "0.4.1"
md5 = "0.7.0"
path_abs = "0.5.1"
regex = "1.5.4"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.78"
tree_magic = "0.2.3"
whoami = "1.2.1"
winreg = "0.10.1"