#cargo-features = ["strip"]

[package]
name = "reg_hunter"
version = "0.7.3"
authors = ["Brian Kellogg <theflakes@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
#strip = 'symbols'
panic = 'abort'
opt-level = "z"
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
overflow-checks = false

[dependencies]
arrayvec = "*"
bstr = "*"
chrono = "*"
docopt = "*"
dunce = "*"
lazy_static = "*"
lnk = "*"
md5 = "*"
path_abs = "*"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tree_magic = "*"
whoami = "*"
winreg = "*"